# DNA-analysis-library

./: .clangd-format  CMakeLists.txt  README.md
data/: README.md  simple_dna_sample.txt
include/: README.md  allocator.h  dna_analysis.h  dna_reader.h  dna_types.h  error_handling.h  result.h
src/: README.md  allocator.c  dna_analysis.c  dna_reader.c  error_handling.c  main.c
tests/: README.md  test_dna_reader.c
tests/test_data/dna_reader/: test_valid_sequence.txt
